<resources>
    <string name="app_name">ِAnimals tools care and store</string>
    <string name="logo">Logo</string>
    <string name="login">Login:</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="btnlogin">Login</string>
    <string name="empty_username_or_pass">Please enter both username and password</string>
    <string name="please_enter_both_username_and_password">Please enter both username and password.</string>
    <string name="incorrect_username_or_password">Incorrect username or password.</string>
    <string name="mainloginbtn">Login</string>
    <string name="app_logo">App Logo</string>
    <string name="mainsign_up">Sign Up</string>
    <string name="the_username_already_exist">The Username already Exist</string>
    <string name="wrong_username_or_password">Wrong username or password</string>
    <string name="Signup">signup\n</string>
    <string name="logout">logout</string>
    <string name="auto_login" />
    <string name="signup">Signup</string>
</resources>
