<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:padding="24dp"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="48dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/logowb"
        android:contentDescription="@string/app_logo"
        android:scaleType="centerInside"

        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainloginbtn"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="40dp"
        style="@style/PrimaryButtonStyle"
        />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainsign_up"
    style="@style/PrimaryButtonStyle"/>


</LinearLayout>
